[0920: Fixing Explorer ScrollBar UI]

--- a/frontend_application/component_lib_testing_application/src/COMPONENTs/monitor/monitor.css
+++ b/frontend_application/component_lib_testing_application/src/COMPONENTs/monitor/monitor.css
@@ -39,14 +39,14 @@
   position: absolute;
   top: 1pt;
   bottom: 1pt;
-  right: 59pt;
+  right: 58pt;
 
   /*SIZE*/
   width: 3pt;
 
   /*STYLE*/
   background-color: #1f1f1f;
-  border-radius: 2pt;
+  border-radius: 3pt;
   cursor: col-resize;
 }
 #monitor_component_visual_resizer0919:hover {
@@ -57,7 +57,7 @@
   position: absolute;
   top: 1pt;
   bottom: 1pt;
-  right: 57pt;
+  right: 56pt;
 
   /*SIZE*/
   width: 7pt;
@@ -65,7 +65,6 @@
   /*STYLE*/
   background-color: #2e2e2e;
   cursor: col-resize;
-  border-radius: 2pt;
 }
 #monitor_component_visual_resizer0919:active {
   /*TRANSITION*/
@@ -73,9 +72,9 @@
 
   /*POSITION*/
   position: absolute;
-  top: 0pt;
-  bottom: 0pt;
-  right: 57pt;
+  top: 1pt;
+  bottom: 1pt;
+  right: 56pt;
 
   /*SIZE*/
   width: 7pt;
@@ -83,5 +82,4 @@
   /*STYLE*/
   background-color: #0d66ac;
   cursor: col-resize;
-  border-radius: 2pt;
 }
